<resources>
    <string name="app_name">Story App</string>
    <string name="title_activity_main">Story App</string>
    <string name="title_home">Home</string>
    <string name="title_login">Login</string>
    <string name="title_register">Register</string>
    <string name="register_text">Register</string>
    <string name="username_text">Username</string>
    <string name="password_text">Password</string>
    <string name="sign_up_here_text">Belum punya akun? Registrasi disini</string>
    <string name="email_text">Email</string>
    <string name="sign_in_here_text">Sudah Punya Akun? Login disini</string>
    <string name="name_text">Nama</string>
    <string name="story_image_text">Story Image</string>
    <string name="detail_story_text">DetailStory</string>
    <string name="add_story_button_text">Add Story Button</string>
    <string name="add_story_text">Add Story</string>
    <string name="image_upload_preview_text">Image Upload Preview</string>
    <string name="upload_text">Upload</string>
    <string name="description_hint_text">Tulis Deskripsi Disini..</string>
    <string name="open_camera_text">Buka Camera</string>
    <string name="logout_desc">Keluar</string>
    <string name="open_gallery_text">Buka Gallery</string>
    <string name="story_logo_desc">Story Logo</string>
    <string name="welcome_text">Selamat Datang,</string>
    <string name="detail_story_text_appbar">Detail Story</string>
    <string name="add_story_text_appbar">Buat Story</string>
    <string name="error_password_text">Harus lebih dari 6 karakter</string>
    <string name="error_email_text">Email Tidak Valid</string>
    <string name="maps_desc">Maps</string>
    <string name="maps_fragment_text">Maps Fragment</string>
    <string name="retry">Coba lagi</string>
</resources>