<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <LinearLayout
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:src="@drawable/story_logo"
            android:contentDescription="@string/story_logo_desc"/>

        <com.harvdev.storyapp.ui.utils.CustomEditText
            android:layout_marginHorizontal="18dp"
            android:layout_marginVertical="8dp"
            android:id="@+id/ed_login_email"
            android:hint="@string/email_text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <com.harvdev.storyapp.ui.utils.CustomEditText
            android:layout_marginHorizontal="18dp"
            android:layout_marginVertical="8dp"
            android:id="@+id/ed_login_password"
            android:hint="@string/password_text"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:layout_margin="18dp"
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_login"/>

        <TextView
            android:id="@+id/text_sign_up"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up_here_text"/>

    </LinearLayout>



</RelativeLayout>