<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_login">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.harvdev.storyapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home">

        <action
            android:id="@+id/action_navigation_home_to_navigation_detail"
            app:destination="@id/navigation_detail"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out"/>

        <action
            android:id="@+id/action_navigation_home_to_navigation_story"
            app:destination="@id/navigation_story"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out"/>


        <action
            android:id="@+id/action_navigation_home_to_navigation_login"
            app:destination="@id/navigation_login"
            app:launchSingleTop="true"
            app:popUpTo="@+id/mobile_navigation"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out"/>

        <action
            android:id="@+id/action_navigation_home_to_navigation_maps"
            app:destination="@id/navigation_maps" />


    </fragment>

    <fragment
        android:id="@+id/navigation_login"
        android:name="com.harvdev.storyapp.ui.login.LoginFragment"
        android:label="@string/title_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_navigation_login_to_navigation_register"
            app:destination="@id/navigation_register"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out"/>

        <action
            android:id="@+id/action_navigation_login_to_navigation_home"
            app:destination="@id/navigation_home"
            app:launchSingleTop="true"
            app:popUpTo="@+id/mobile_navigation"
            app:popUpToInclusive="true"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_register"
        android:name="com.harvdev.storyapp.ui.register.RegisterFragment"
        android:label="@string/title_register"
        tools:layout="@layout/fragment_register">

        <action
            android:id="@+id/action_navigation_register_to_navigation_login"
            app:destination="@id/navigation_login"
            app:enterAnim="@anim/fade_in"
            app:exitAnim="@anim/fade_out"
            app:popEnterAnim="@anim/fade_in"
            app:popExitAnim="@anim/fade_out"/>
    </fragment>

    <fragment
        android:id="@+id/navigation_detail"
        android:name="com.harvdev.storyapp.ui.detailstory.DetailStoryFragment"
        android:label="@string/detail_story_text"
        tools:layout="@layout/detail_story_fragment" />

    <fragment
        android:id="@+id/navigation_story"
        android:name="com.harvdev.storyapp.ui.addstory.AddStoryFragment"
        android:label="@string/add_story_text"
        tools:layout="@layout/add_story_fragment" />

    <fragment
        android:id="@+id/navigation_maps"
        android:name="com.harvdev.storyapp.ui.maps.MapsFragment"
        android:label="@string/maps_fragment_text"
        tools:layout="@layout/fragment_maps" />
</navigation>